--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <img src="#">
   <script>
     const img = document.querySelector('img');
-    fetch('https://api.giphy.com/v1/gifs/translate?api_key=0Ld30QOcbuLbgMqLSOC8XEs9AM4zjaYf&s=cats', { mode: 'cors' })
-        .then((response) => {
-            return response.json();
-        })
-        .then((response) => {
-            img.src = response.data.images.original.url;
-        });
+
+    async function getCats() {
+      const response = await fetch ('https://api.giphy.com/v1/gifs/translate?api_key=0Ld30QOcbuLbgMqLSOC8XEs9AM4zjaYf&s=cats', { mode: 'cors' });
+      const catData = await response.json();
+      img.src = catData.data.images.original.url;
+    }
+
+    getCats();
   </script>
 </body>
 </html>
